@@ -1,3 +1,10 @@
+Darkice next release
+
+    o added cross-platform pthread detection, thanks to
+      Steven G. Johnson <stevenj@alum.mit.edu> and
+      Alejandro Forero Cuervo <bachue@bachue.com>
+      see http://www.gnu.org/software/ac-archive/htmldoc/acx_pthread.html
+
 09-02-2003: DarkIce 0.13 released
 
     o added feature for setting the TITLE comment field for vorbis
